--- a/public/splash.html
+++ b/public/splash.html
@@ -17,20 +17,21 @@
     </div>
     <div style="flex-grow:1;margin-top:30px;">
         <div style="font-size:16px;line-height:2em;margin-bottom:1em;">%slogan%</div>
-        <div style="font-size:14px;line-height:2em;">视频合成 · 口型替换 · 声音克隆 · 声音生成</div>
+        <div style="font-size:14px;line-height:2em;">Video Synthesis · Lip Sync · Voice Cloning · Voice Generation</div>
     </div>
     <div style="color:#999;font-size:12px;">
-        正在启动 ...
+        Starting up ...
     </div>
 </div>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-size: 14px;
         line-height: 2em;
-        font-family: Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;
+        font-family: Noto Sans JP, Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;
     }
 
     body {
